[package]
name = "ens"
version = "0.1.0"
description = "Access the Ethereum Name Service"
documentation = "https://docs.rs/ens"
keywords = ["ens", "web3", "ethereum"]
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]
homepage = "https://github.com/hhatto/rust-ens"
repository = "https://github.com/hhatto/rust-ens"
license = "MIT"
readme = "README.md"

[dependencies]
web3 = "0.3.1"
tiny-keccak = "1.4.2"
lazy_static = "1.0"
